# Copyright © 2016 Bart Massey
# This program is licensed under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "aoc"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Library for Advent of Code 2016 solutions."
repository = "http://github.com/BartMassey/advent-of-code-2016"
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
default = []
trace = []

[workspace]
members = [
    "astar", "comb", "geom", "hexstring", "maprender",
    "numberfns", "reparse",
]
