# Copyright © 2016 Bart Massey
# This program is licensed under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "aoc"
version = "0.2.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Library for Advent of Code solutions."
repository = "http://github.com/BartMassey/libaoc"
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
default = []
trace = []

[dependencies.aoc-astar]
path = "./astar"

[dependencies.aoc-comb]
path = "./comb"

[dependencies.aoc-geom]
path = "./geom"

[dependencies.aoc-hexstring]
path = "./hexstring"

[dependencies.aoc-maprender]
path = "./maprender"

[dependencies.aoc-numberfns]
path = "./numberfns"

[dependencies.aoc-reparse]
path = "./reparse"

[workspace]
members = [
    "astar",
    "comb",
    "geom",
    "hexstring",
    "maprender",
    "numberfns",
    "reparse",
]
