# Copyright © 2016 Bart Massey
# This program is licensed under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "aoc"
version = "0.2.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Library for Advent of Code solutions."
repository = "http://github.com/BartMassey/libaoc"
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
default = []
trace = []
astar = ["aoc-astar"]
comb = ["aoc-comb"]
geom = ["aoc-geom"]
hexstring = ["aoc-hexstring"]
maprender = ["aoc-maprender"]
numberfns = ["aoc-numberfns"]
reparse = ["aoc-reparse"]


[dependencies.aoc-astar]
path = "./astar"
optional = true

[dependencies.aoc-comb]
path = "./comb"
optional = true

[dependencies.aoc-geom]
path = "./geom"
optional = true

[dependencies.aoc-hexstring]
path = "./hexstring"
optional = true

[dependencies.aoc-maprender]
path = "./maprender"
optional = true

[dependencies.aoc-numberfns]
path = "./numberfns"
optional = true

[dependencies.aoc-reparse]
path = "./reparse"
optional = true

[workspace]
members = [
    "astar",
    "comb",
    "geom",
    "hexstring",
    "maprender",
    "numberfns",
    "reparse",
]
